// Copyright (c) 2017-2021 VMware, Inc. or its affiliates
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package idl;

service CliToHub {
    rpc CheckDiskSpace (CheckDiskSpaceRequest) returns (CheckDiskSpaceReply) {}
    rpc Initialize(InitializeRequest) returns (stream Message) {}
    rpc InitializeCreateCluster(InitializeCreateClusterRequest) returns (stream Message) {}
    rpc Execute(ExecuteRequest) returns (stream Message) {}
    rpc Finalize(FinalizeRequest) returns (stream Message) {}
    rpc Revert(RevertRequest) returns (stream Message) {}
    rpc GetConfig (GetConfigRequest) returns (GetConfigReply) {}
    rpc RestartAgents(RestartAgentsRequest) returns (RestartAgentsReply) {}
    rpc StopServices(StopServicesRequest) returns (StopServicesReply) {}
}

message InitializeRequest {
    int32 agentPort = 1;
    string sourceGPHome = 2;
    string targetGPHome = 3;
    int32 sourcePort = 4;
    bool useLinkMode = 5;
    bool useHbaHostnames = 6;
    repeated uint32 ports = 7;
}
message InitializeCreateClusterRequest {}
message ExecuteRequest {}
message FinalizeRequest {}

message RevertRequest {}

message RestartAgentsRequest {}
message RestartAgentsReply {
    repeated string agentHosts = 1;
}

message StopServicesRequest {}
message StopServicesReply {}

message SubstepStatus {
  Substep step = 1;
  Status status = 2;
}

enum Step {
  UNKNOWN_STEP = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
  INITIALIZE = 1;
  EXECUTE = 2;
  FINALIZE = 3;
  REVERT = 4;
}

enum Substep {
    UNKNOWN_SUBSTEP = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    SAVING_SOURCE_CLUSTER_CONFIG = 1;
    START_HUB = 2;
    START_AGENTS = 3;
    CHECK_DISK_SPACE = 4;
    GENERATE_TARGET_CONFIG = 5;
    INIT_TARGET_CLUSTER = 6;
    SHUTDOWN_TARGET_CLUSTER = 7;
    BACKUP_TARGET_MASTER = 8;
    CHECK_UPGRADE = 9;
    SHUTDOWN_SOURCE_CLUSTER = 10;
    UPGRADE_MASTER = 11;
    COPY_MASTER = 12;
    UPGRADE_PRIMARIES = 13;
    START_TARGET_CLUSTER = 14;
    UPDATE_TARGET_CATALOG_AND_CLUSTER_CONFIG = 15;
    UPDATE_DATA_DIRECTORIES = 16;
    UPDATE_TARGET_CONF_FILES = 17;
    UPGRADE_STANDBY = 18;
    UPGRADE_MIRRORS = 19;
    DELETE_TABLESPACES = 20;
    DELETE_TARGET_CLUSTER_DATADIRS = 21;
    DELETE_SEGMENT_STATEDIRS = 22;
    STOP_HUB_AND_AGENTS = 23;
    DELETE_MASTER_STATEDIR = 24;
    ARCHIVE_LOG_DIRECTORIES = 25;
    RESTORE_SOURCE_CLUSTER = 26;
    START_SOURCE_CLUSTER = 27;
    RESTORE_PGCONTROL = 28;
    RECOVERSEG_SOURCE_CLUSTER = 29;
    RECOVERSEG_TARGET_CLUSTER = 30;
    STEP_STATUS = 31;
}

enum Status {
    UNKNOWN_STATUS = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
    RUNNING = 1;
    COMPLETE = 2;
    FAILED = 3;
    SKIPPED = 4;
}

message CheckDiskSpaceRequest {
  double ratio = 1;
}

message CheckDiskSpaceReply {
  message DiskUsage {
    uint64 available = 1;
    uint64 required = 2;
  }
  map<string, DiskUsage> failed = 1;
}

message PrepareInitClusterRequest {}
message PrepareInitClusterReply {}

message Chunk {
  bytes buffer = 1;
  enum Type {
    UNKNOWN = 0;
    STDOUT = 1;
    STDERR = 2;
  }
  Type type = 2;
}

message Message {
  oneof contents {
    Chunk chunk = 1;
    SubstepStatus status = 2;
    Response response = 3;
  }
}

message Response {
  oneof contents {
    InitializeResponse initializeResponse = 3;
    ExecuteResponse executeResponse = 4;
    FinalizeResponse finalizeResponse = 5;
    RevertResponse revertResponse = 6;
  }
}

message InitializeResponse {
  bool HasMirrors = 1;
  bool HasStandby = 2;
}

message Cluster {
  int32 Port = 1;
  string MasterDataDirectory = 2;
}

message ExecuteResponse {
  Cluster target = 1;
}

message FinalizeResponse {
  Cluster target = 1;
  string TargetVersion = 2;
  string LogArchiveDirectory = 3;
  string ArchivedSourceMasterDataDirectory = 4;
  string UpgradeID = 5;
}

message RevertResponse {
  Cluster source = 1;
  string SourceVersion = 2;
  string LogArchiveDirectory = 3;
}

message GetConfigRequest {
    string name = 1;
}
message GetConfigReply {
    string value = 1;
}
