syntax = "proto3";

package idl;

import "cli_to_hub.proto";

service Agent {
  rpc CheckDiskSpace (CheckSegmentDiskSpaceRequest) returns (CheckDiskSpaceReply) {}
  rpc UpgradePrimaries (UpgradePrimariesRequest) returns (UpgradePrimariesReply) {}
  rpc RenameDirectories (RenameDirectoriesRequest) returns (RenameDirectoriesReply) {}
  rpc StopAgent (StopAgentRequest) returns (StopAgentReply) {}
  rpc DeleteDirectories (DeleteDirectoriesRequest) returns (DeleteDirectoriesReply) {}
}

message UpgradePrimariesRequest {
    string SourceBinDir = 1;
    string TargetBinDir = 2;
    string TargetVersion = 3;
    repeated DataDirPair DataDirPairs = 4;
    bool CheckOnly = 5;
    bool UseLinkMode = 6;
    string MasterBackupDir = 7;
}

message DataDirPair {
    string SourceDataDir = 1;
    string TargetDataDir = 2;
    int32  SourcePort    = 3;
    int32  TargetPort    = 4;
    int32  Content    = 5;
    int32  DBID       = 6;
}

message UpgradePrimariesReply {}

message DeleteDirectoriesRequest {
  repeated string datadirs = 1;
}

message DeleteDirectoriesReply {}

message RenameDirectories {
  string Source = 1;
  string Archive = 2;
  string Target = 3;
  bool ArchiveOnly = 4;
}

message RenameDirectoriesRequest {
  repeated RenameDirectories Dirs = 1;
}

message RenameDirectoriesReply {}

message StopAgentRequest {}
message StopAgentReply {}

message CheckSegmentDiskSpaceRequest {
    CheckDiskSpaceRequest request = 1;
    repeated string datadirs = 2;
}
